RESOLVED FIXED12453
REGRESSION(r19197): Tabbing into web page requires two key presses
https://bugs.webkit.org/show_bug.cgi?id=12453
Summary REGRESSION(r19197): Tabbing into web page requires two key presses
David Kilzer (:ddkilzer)
Reported 2007-01-28 12:41:39 PST
Summary: When tabbing into a web page, it requires two key presses (two tabs) instead of just one. If a text field already has focus after the page loads, the first tab moves off the page, then the second moves to the next form element. Steps to reproduce: 1. Open Safari/WebKit. 2. Open URL: data:text/html,<input type="text"> 3. Hit tab key once. Expected results: Text field should be highlighted. Actual results: Text field is not highlighted until tab key is hit a second time. Regression: Works with WebKit nightly r19193. Does not work with a locally-built debug build of WebKit r19197 with Safari 2.0.4 (419.3) on Mac OS X 10.4.8 (8N1037).
Attachments
Patch with changelog (1.96 KB, patch)
2007-01-28 15:25 PST, Adam Roben (:aroben)
adele: review+
David Kilzer (:ddkilzer)
Comment 1 2007-01-28 12:47:32 PST
Rolled back to r19196 fixes this issue. Confirmed it's an issue with r19197, which fixed this Radar issue: <rdar://problem/4957184> REGRESSION: After creating a new mail message, the caret is automatically in message body
Adam Roben (:aroben)
Comment 2 2007-01-28 15:25:31 PST
Created attachment 12732 [details] Patch with changelog
Adam Roben (:aroben)
Comment 3 2007-01-28 19:41:44 PST
Landed as r19207.
Note You need to log in before you can comment on or make changes to this bug.